--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <link rel="manifest"
         href="manifest.webmanifest">
   <meta name="theme-color"
-        content="#1976d2">
+        content="#c2185b">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap"
         rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
